Fix the visibility of background images

--- a/style.css
+++ b/style.css
@@ -501,7 +501,7 @@ textarea:focus {
     gap: 40px;
     height: auto;
     padding-top: 200px;
-    background-image: url("./desktop.png");
+    background-image: url("desktop.png");
     background-repeat: no-repeat;
     background-position: top right;
     background-color: #1c1a19;
@@ -604,7 +604,7 @@ textarea:focus {
     background-repeat: no-repeat;
     flex-direction: column;
     justify-content: flex-end;
-    background-image: url("./cardsimage/bg1.png");
+    background-image: url("cardsimage/bg1.png");
   }
 
   .btn-desk {
@@ -618,31 +618,31 @@ textarea:focus {
   }
 
   .desktop2 {
-    background-image: url("./cardsimage/bg2.png");
+    background-image: url("cardsimage/bg2.png");
     background-repeat: no-repeat;
     padding: 80px 0 20px 5px;
   }
 
   .desktop3 {
-    background-image: url("./cardsimage/bg3.png");
+    background-image: url("cardsimage/bg3.png");
     background-repeat: no-repeat;
     padding: 120px 0 20px 5px;
   }
 
   .desktop4 {
-    background-image: url("./cardsimage/bg4.png");
+    background-image: url("cardsimage/bg4.png");
     background-repeat: no-repeat;
     padding: 80px 0 20px 5px;
   }
 
   .desktop5 {
-    background-image: url("./cardsimage/bg2.png");
+    background-image: url("cardsimage/bg2.png");
     background-repeat: no-repeat;
     padding: 80px 0 20px 5px;
   }
 
   .desktop6 {
-    background-image: url("./cardsimage/bg3.png");
+    background-image: url("cardsimage/bg3.png");
     background-repeat: no-repeat;
     padding: 120px 0 20px 5px;
   }
@@ -659,9 +659,9 @@ textarea:focus {
   }
 
   .about-section {
-    background-image: url("./cardsimage/aboutFrame.png");
+    background-image: url("cardsimage/aboutFrame.png");
     background-repeat: no-repeat;
-    background-position: 740px 68px;
+    background-position: 100% 55%;
   }
 
   .about-heading {
